New menu options

--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
   <body>
     <h1>teste</h1>
     <a>teste 2</a>
+
+    <div>
+      <ul>
+        <li>nome</li>
+        <li>produtos</li>
+        <li>serviços</li>
+        <li>termos de uso</li>
+        <li>politicas de privacidade</li>
+      </ul>
+    </div>
   </body>
 </html>
