--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <li>termos de uso</li>
         <li>politicas de privacidade</li>
       </ul>
+
+      <h1>escolha um nome</h1>
     </div>
   </body>
 </html>
